--- a/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
+++ b/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
@@ -297,6 +297,7 @@
     <Component class="javax.swing.JButton" name="summaryReportButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Summary Report"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="summaryReportButtonClick"/>
