--- a/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
+++ b/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
@@ -181,6 +181,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="titleCalculator">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="13" style="3"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Loan Payment Calculator"/>
       </Properties>
       <AccessibilityProperties>
@@ -313,6 +316,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="textLabel7">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="13" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Annual Payment"/>
       </Properties>
     </Component>
